--- a/new.css
+++ b/new.css
@@ -10,8 +10,8 @@ body {
   box-sizing: border-box;
 }
 nav .menu {
-  font-family: "Inter";
-  font-optical-sizing: auto;
+ font-family: "Inter";
+  
 }
 nav {
   display: flex;
@@ -45,14 +45,14 @@ nav .btn {
   font-size: 16px;
   font-family: "Inter";
   font-weight: 600;
-  color: #ffffff;
+  color: #FFFFFF;
   background-color: #30b868;
   border-radius: 4px;
   border: none;
 }
 
 .hero-banner {
-  background-image: url("../B13-A01-Knowledge-Vault/assets/hero-bg.png");
+  background-image: url("../assets/hero-bg.png");
   background-size: cover;
   background-position: center;
   height: 674px;
@@ -316,7 +316,7 @@ p {
   width: 85%;
   border-radius: 12px;
   margin: 0 auto;
-  background-color: #f7f6f2;
+  background-color: #F7F6F2;
 }
 
 .last-section h1 {
@@ -356,7 +356,7 @@ p {
 }
 .last-a-1 span {
   margin-left: 10px;
-  color: #ffffff;
+  color: #FFFFFF;
   font-size: 16px;
 }
 
@@ -411,7 +411,7 @@ p {
   font-family: "Inter";
   line-height: 28px;
   margin-bottom: 16px;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 .social-icons {
@@ -431,5 +431,5 @@ p {
   font-weight: 400;
   font-family: "Inter";
   font-size: 16px;
-  color: #fafafa;
+  color: #FAFAFA;
 }
