--- a/new.css
+++ b/new.css
@@ -16,7 +16,7 @@ nav .menu {
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 nav .logo img {
   width: 139px;
